--- a/package.json
+++ b/package.json
@@ -5,23 +5,28 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-        "dev": "node server.js"
+      "dev": "node server.js",
+      "start": "node server.js"
     },
     "dependencies": {
-        "@google-cloud/speech": "^7.2.1",
-        "@google-cloud/text-to-speech": "^6.4.0",
-        "@google/generative-ai": "^0.24.1",
-        "axios": "^1.13.2",
-        "cors": "^2.8.5",
-        "dotenv": "^16.4.5",
-        "express": "^4.18.2",
-        "fluent-ffmpeg": "^2.1.3",
-        "fs": "^0.0.1-security",
-        "node-fetch": "^3.3.2",
-        "openai": "^4.76.0",
-        "qrcode-terminal": "^0.12.0",
-        "redis": "^5.10.0",
-        "util": "^0.12.5",
-        "whatsapp-web.js": "^1.34.2"
+      "@google-cloud/speech": "^7.2.1",
+      "@google-cloud/text-to-speech": "^6.4.0",
+      "@google/generative-ai": "^0.24.1",
+      "axios": "^1.13.2",
+      "cors": "^2.8.5",
+      "dotenv": "^16.4.5",
+      "express": "^4.18.2",
+      "ffmpeg-static": "^5.2.0",
+      "fluent-ffmpeg": "^2.1.3",
+      "fs": "^0.0.1-security",
+      "node-fetch": "^3.3.2",
+      "openai": "^4.76.0",
+      "qrcode-terminal": "^0.12.0",
+      "redis": "^5.10.0",
+      "util": "^0.12.5",
+      "whatsapp-web.js": "^1.23.0"
+    },
+    "engines": {
+      "node": ">=18.0.0"
     }
-}
+  }
