--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "express": "^4.18.2",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
-    "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
     "node-fetch": "^3.3.2",
     "openai": "^4.76.0",
     "qrcode-terminal": "^0.12.0",
     "redis": "^5.10.0",
     "util": "^0.12.5",
-    "whatsapp-web.js": "https://github.com/wwebjs/wwebjs/tarball/main"
+    "whatsapp-web.js": "https://github.com/juliansteenbakker/whatsapp-web.js/tarball/master"
   },
   "engines": {
     "node": ">=18.0.0"
